2004-03-11  Bryan Chan  <b8chan@uwaterloo.ca>
	* src/NoiseShader.cpp: Moved shdemo over to shrike.
	
2004-03-11  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeFrame.cpp (setShader): Use firstTimeInit() here
	instead of initializing everything in initShaderList(). This cuts
	down the startup time a lot.

	* src/Shader.cpp (firstTimeInit): Implement firstTimeInit(), which
	only calls init() once.

	* src/Shader.hpp: Add a prototype for firstTimeInit().

	* src/Textures.cpp: Added a simple example of using textures.

	* src/Pants.cpp: Added this really cool new shader. Thanks to
	Craig Kaplan.

	* src/NonPeriodic.cpp: Added this new shader. Thanks to Craig Kaplan.

2004-03-09  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeFrame.cpp: Added a "Reset View" menu item.

	* src/ShrikeFrame.hpp: Added a reset view event.

	* src/ShrikeCanvas.cpp (resetView): Added this function.

	* src/Logo.cpp (render): Use an S object file from Houdini.

	* src/ShrikeFrame.cpp (reinit): Implemented reinit.

	* src/ShrikeFrame.hpp: Added reinitialize function + event.

2004-03-08  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeCanvas.cpp (render): Call back the shader to do the
	rendering (which by default gets us to render an object).
	(motion): Rotate the light appropriately, taking into account the
	current modelview matrix.
	(motion): Add shift-middle drag to change the light distance from
	the origin.

	* src/Shader.hpp: Added render() as an overridable method.

	* src/Logo.cpp: Added the Sh Logo shader.

2004-03-04  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeFrame.cpp (ShrikeFrame): Use more sane default sizes
	and a minimum panel size.

	* src/Ashikhmin.cpp (ashikhmin_specular): clamp more properly,
	although I think it's still slightly off.

	* src/Texter.cpp (Texter): Use setStringParam to allow the user to
	change the text.
	(doText): Added a few letters.

	* src/ShrikeFrame.cpp (showProgram): Added functions to show the