@@ -24,7 +24,8 @@ ShrikeCanvas::ShrikeCanvas(wxWindow* parent, ShObjMesh* model)
     m_init(false),
     m_model(model),
     m_shader(0),
-    m_showLight(true)
+    m_showLight(true),
+    m_bg_r(0.2), m_bg_g(0.2), m_bg_b(0.2)
 {
   m_instance = this;
   Globals::mv.internal(true);
@@ -186,7 +187,7 @@ void ShrikeCanvas::init()
 
   glEnable(GL_DEPTH_TEST);
 
-  glClearColor(0.2, 0.2, 0.2, 1.0);
+  glClearColor(m_bg_r, m_bg_g, m_bg_b, 1.0);
   setupView();
   
   shSetBackend("arb");
@@ -212,4 +213,16 @@ void ShrikeCanvas::resetView()
     setupView();
     render();
   }
+}
+
+void ShrikeCanvas::setBackground(unsigned char r, unsigned char g, unsigned char b)
+{
+  m_bg_r = (float)r/255.0;
+  m_bg_g = (float)g/255.0;
+  m_bg_b = (float)b/255.0;
+
+  glClearColor(m_bg_r, m_bg_g, m_bg_b, 1.0);
+  
+  SetCurrent();
+  render();
 }
